# regEZ

./: CMakeLists.txt  Makefile  README.md  STYLE.md  doxygen.conf  flake.nix  meson.build  meson_options.txt  set-name.sh
benchmarks/: regez_benchmark.cpp
benchmarks/plotting/: simple_plot.ipynb
docs/: docs.doxygen
fuzz/: regez_fuzz.cpp
include/: regez.hpp
include/regez/: BUILD  constexpr_stack.hpp  constexpr_vector.hpp  operators.hpp  regez.hpp  regez_constexpr.hpp
src/: BUILD  main.cpp  regez.cpp
subprojects/: valfuzz.wrap
tests/: regez_test.cpp  regez_tests.cpp
