option('REGEZ_BUILD_SHARED', type: 'boolean', value: 'true', description:'Build shared library')
option('REGEZ_BUILD_STATIC', type: 'boolean', value: 'false', description: 'Build static library')
option('REGEZ_BUILD_TESTS', type: 'boolean', value: 'true', description: 'Build tests')
option('REGEZ_BUILD_OPTIMIZED', type: 'boolean', value: 'false', description: 'Build optimized')
option('REGEZ_BUILD_OPTIMIZED_AGGRESSIVE', type: 'boolean', value: 'false', description: 'Build with maximum optimization')
